--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,102 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
+
+* {
+	padding: 0;
+	margin: 0;
+}
+
+:root {
+	font-size: 1rem;
+	font-family: 'Open Sans';
+
+	--text-primary: #b6b6b6;
+	--text-secondary: #ececec;
+	--bg-primary: #23232e;
+	--bg-secondary: #141418;
+	--transition-speed: 600ms;
+
+	--b-bg-primary: #3e3e51;
+}
+
+/* have to make a false body */
+false_body {
+	position: fixed;
+	height: 1000vh;
+	width: 1000vw;
+	top: -50%;
+	left: -50%;
+	
+	z-index: -10;
+
+	background-color: var(--bg-primary);
+	overflow: hidden;
+}
+
+article {
+	color: var(--text-secondary);
+	overflow-y: hidden;
+}
+
+article:last-child {
+	margin-top: auto;
+}
+
+.inner_root {
+	margin-top: 5rem;
+	min-height: 100vh;
+}
+
+.dark {
+	--text-primary: #3f3c3c;
+	--text-secondary: #ececec;
+	--bg-primary: #23232e;
+	--bg-secondary: #141418;
+
+	--b-bg-primary: #3e3e51;
+}
+
+.light {
+	--text-primary: #1f1f1f;
+	--text-secondary: #000000;
+	--bg-primary: #ffffff;
+	--bg-secondary: #e4e4e4;
+
+	--b-bg-primary: #ffffff;
+}
+
+.solar {
+	--text-primary: #576e75;
+	--text-secondary: #35535c;
+	--bg-primary: #fdf6e3;
+	--bg-secondary: #f5e5b8;
+
+	--b-bg-primary: #e3daaa;
+}
+
+body::-webkit-scrollbar {
+	width: 0.25rem;
+}
+
+body::-webkit-scrollbar-track {
+	background: #1e1e24;
+}
+
+body::-webkit-scrollbar-thumb {
+	background: #1d113d;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+@media only screen and (max-width: 600px) {
+	article {
+		margin: 0;
+	}
 }
