added sea theme, sample image

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,12 +3,13 @@
 	flex-direction: column;
 	align-items: center;
 	text-align: center;
+	justify-content: center;
 }
 
 .section_01 h1 {
 	font-size: 6rem;
 
-	text-shadow:     0 1px 0 hsl(174,5%,80%),
+	/* text-shadow:     0 1px 0 hsl(174,5%,80%),
 					   0 2px 0 hsl(174,5%,75%),
 					   0 3px 0 hsl(174,5%,70%),
 					   0 4px 0 hsl(174,5%,66%),
@@ -22,5 +23,5 @@
 					  0 3px 5px rgba(0,0,0,.2),
 					 0 5px 10px rgba(0,0,0,.2),
 					0 10px 10px rgba(0,0,0,.2),
-					0 20px 20px rgba(0,0,0,.3);
+					0 20px 20px rgba(0,0,0,.3); */
 }
