--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -9,6 +9,8 @@
     background-color: var(--bg-primary);
 
     font-size: 0.8rem;
+
+    filter: opacity(0.9);
 }
 
 .m_footer_elm>* {
@@ -29,7 +31,6 @@
 
 .m_footer_elm * {
     color: var(--text-secondary);
-    filter: grayscale(0%) opacity(0.5);
 }
 
 @media only screen and (max-width: 600px) {
