--- a/styles/Image.module.css
+++ b/styles/Image.module.css
@@ -1,4 +1,5 @@
-.image_border_circle, .image_border_circle img {
+.image_border_circle {
+	
 	max-width: fit-content;
 	
 	display: flex;
@@ -9,5 +10,6 @@
 	border-color: var(--bg-secondary);
 	border-radius: 50%;
 
-	/* box-shadow: 0px 10px 10px var(--bg-secondary); */
+	-webkit-transition: opacity 600ms, visibility 600ms;
+	transition: opacity 600ms, visibility 600ms;
 }
