--- a/styles/SlideShow.module.css
+++ b/styles/SlideShow.module.css
@@ -1,8 +1,8 @@
 .slideshow {
-	margin: 0 auto;
-	overflow: hidden;
+	/* margin: 0 auto; */
+	/* overflow: hidden; */
 	max-width: 500px;
-	border-radius: 50%;
+	/* border-radius: 50%; */
 }
 
 .slideshowSlider {
