--- a/styles/SlideShow.module.css
+++ b/styles/SlideShow.module.css
@@ -1,5 +1,5 @@
 .slideshow {
-	/* margin: 0 auto; */
+	margin: 0 auto;
 	/* overflow: hidden; */
 	max-width: 500px;
 	/* border-radius: 50%; */
@@ -7,5 +7,5 @@
 
 .slideshowSlider {
 	white-space: nowrap;
-	transition: ease 1000ms;
+	transition: ease var(--transition-speed);
 }
