--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,9 +12,9 @@
 	font-size: 6rem;
 	font-weight: 900;
 	/* color: linear-gradient(45deg, var(--bg-secondary), var(--bg-primary)); */
-	background: linear-gradient(
+	/* background: linear-gradient(
 		to right, #03256C, #2541B2,
-		 #1768AC, #204492);
+		 #1768AC, #204492); */
 	-webkit-text-fill-color: transparent;
 	-webkit-background-clip: text;
 }
