--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,7 +29,7 @@ false_body {
 	
 	z-index: -10;
 
-	background-image: url(/img/background/deep_ocean_background.svg);
+	background-color: var(--b-bg-primary);
 	/* Center and scale the image nicely */
 	background-position: center;
 	background-repeat: no-repeat;
@@ -90,8 +90,8 @@ article:last-child {
 }
 
 body::-webkit-scrollbar {
-	width: 0.25rem;
-	height: 0.25rem;
+	width: 0.50rem;
+	height: 0.15rem;
 }
 
 body::-webkit-scrollbar-track {
