added appropriate data

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -12,9 +12,10 @@
 }
 
 .m_footer_elm>* {
-    margin-left: 1rem;
+    /* margin-left: 1rem;
     margin-right: 1rem;
-
+     */
+    margin: 1rem;
     transition: all var(--transition-speed) ease;
 
     color: var(--text-primary);
