--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -1,7 +1,7 @@
 .navbar {
 	position: fixed;
 	z-index: 5;
-	background-color: var(--bg-secondary);
+	background-color: var(--bg-primary);
 	transition: width 600ms ease;
 	overflow: hidden;
 
