--- a/styles/Map.module.css
+++ b/styles/Map.module.css
@@ -1,15 +1,4 @@
-
-.map_container {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	text-align: center;
-	justify-content: center;
-
-	overflow-x: hidden;
-}
-
-.map_container::-webkit-scrollbar {
+.map_container_iframe::-webkit-scrollbar {
     display: none;
 }
 
