--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -9,6 +9,9 @@
     background-color: var(--bg-primary);
 
     font-size: 0.8rem;
+
+	filter: grayscale(100%) opacity(0.5);
+	transition: var(--transition-speed);
 }
 
 .m_footer_elm>* {
@@ -19,14 +22,25 @@
     border-color: var(--b-bg-primary);
 }
 
+.m_footer:hover {
+    transition: all var(--transition-speed) ease;
+	filter: grayscale(100%) opacity(0.7);
+}
+
 .m_footer_elm.ul {
     text-decoration: none;
 }
 
 .m_footer_elm * {
     color: var(--text-secondary);
-    filter: grayscale(0%) opacity(0.5);
+    filter: grayscale(100%) opacity(0.5);
 }
+
+.m_footer_elm *:hover {
+    filter: grayscale(0%) opacity(1);
+}
+
+
 
 @media only screen and (max-width: 600px) {
     .m_footer {
