added directions instructions

--- a/styles/Map.module.css
+++ b/styles/Map.module.css
@@ -6,3 +6,20 @@
     height: 100%;
     width: 100%;
 }
+
+.directions_container {
+    margin: 3rem;
+
+    display: flex;
+}
+
+.list_container {
+    font-family: 'Cedarville Cursive';
+    font-size:x-large;
+}
+
+@media only screen and (max-width: 600px) {
+    .list_container {
+        font-size:large;
+    }    
+}
