--- a/styles/Invitation.module.css
+++ b/styles/Invitation.module.css
@@ -26,6 +26,9 @@
     max-width: 100%;
     max-height: 100%;
     
+    /* min-height: 10rem;
+    min-width: 10rem; */
+
     filter: grayscale(0%) opacity(1);
 }
 
